# mycelia

./: .env.example  .gitignore  Cargo.toml  Cross.toml  README.md  rustwrap.yaml  wasi_snapshot_preview1.reactor.wasm  wasi_snapshot_preview1.reactor.wasm.dev
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build-release.yml  build.yml  create_branch_from_tag.yml  release.yml  rust.yml
cli/: Cargo.toml  build.rs
cli/proto/: cli.proto  development.proto
cli/src/: build.rs  client.rs  deploy.rs  main.rs  new.rs  paths.rs  publish.rs  rc.rs  release.rs  start.rs  stop.rs  version.rs  version_opts.rs
cli/static/mycelia-app/: package-lock.json  package.json
components/: README.md  function-component.wasm
components_meh/: function-component.wasm  js_function-component.wasm
development_server/: Cargo.toml  build.rs
development_server/proto/: development.http  development.proto
development_server/src/: http_function_component.rs  main.rs  rpc.rs
guest_crates/mycelia_http/: Cargo.toml
guest_crates/mycelia_http/src/: lib.rs
guest_crates/mycelia_http/wit/: deps.toml
guests/: README.md
guests/function/: Cargo.toml  Makefile  build.rs
guests/function/src/: lib.rs
guests/function/wit/: deps.toml  function.wit  world.wit
guests/js_function/: Cargo.toml  README.md  main.js  package-lock.json  package.json
guests/mycelia_guest_function/: Cargo.toml
js_function/: README.md  componentize.js  main.js  package.json
js_function/wit/: world.wit
mycelia_http/: Cargo.toml  test
mycelia_http/src/: lib.rs
mycelia_http/wit/: http.wit
npm/: info.json  package.json
protos/: Cargo.toml  build.rs
protos/proto/: development.proto
protos/src/: lib.rs  main.rs
resource_providers/: Cargo.toml
resource_providers/src/: core.rs  http.rs  lib.rs
resource_providers/src/providers/: http_client_hyper.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: function.rs  lib.rs
runtime/wit/: function.wit
rustwrap/: mycelia-root.json  mycelia-sub.json
services/function/: Cargo.toml  bindings.rs
services/function/src/: function.rs  lib.rs
wasmtime_components/: Cargo.toml
wasmtime_components/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs  paths.rs  publish.rs  release.rs
