[workspace]

members = [
  # Tooling
  "xtask",
  "cli",
  "development_server",
  "wasmtime_components",

  "mycelia_http",

  # Services
  "services/function",

  # Guests
  "guests/function",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
log = "0.4.20"
env_logger = "0.9.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main"}
thiserror = "1.0.48"
tokio = { version = "1.3.2" }
