[workspace]
members = [
  # Tooling
  "xtask",
  "protos",
  "cli",
  "development_server",
  "wasmtime_components",

  "resource_providers",

  "guest_crates/mycelia_http",

  # Services
  "services/function",

  # Guests
  "guests/function",
  "guests/js_function",
]

resolver = "2"

[workspace.dependencies]
version-compare = { version = "0.1.1" }
anyhow = "1.0.75"
async-trait = "0.1.73"
log = "0.4.20"
env_logger = "0.9.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main", features = [
  "component-model",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main" }
thiserror = { version = "1.0.48" }
tokio = { version = "1.3.2" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", branch = "main" }
http = { version = "0.2.9" }
tower = { version = "0.4.13" }
hyper = { version = "0.14.27" }
