[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
open = "5.0.0"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.10.0" }

[build-dependencies]
tonic-build = "0.10.0"
