[package]
name = "cli"
description = "Mycelia Command Line Interface"
version = "0.1.0"
edition = "2021"
default-run = "cli"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyceliaNetwork/mycelia"
authors = ["Daniel Terwiel <dani+mycelia@departure.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
open = "5.0.0"
prost = "0.12.0"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.10.0" }

development_server = { path = "../development_server" }
mycelia_guest_function = { path = "../guests/function" }
mycelia_http = { path = "../guest_crates/mycelia_http" }
protos = { path = "../protos" }
resource_providers = { path = "../resource_providers" }
function_service = { path = "../services/function" }
# wasm_components = { path = "../wasm_components" }
xtask = { path = "../xtask" }
rustwrap = "1.0.5"
version-compare = { workspace = true }
dialoguer = "0.11.0"

[build-dependencies]
tonic-build = "0.10.0"

# [[bin]]
# name = "mycelia"
# path = "src/main.rs"
