[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
current_platform = "0.2.0"
env_logger = { workspace = true }
log = { workspace = true }
octocrab = "0.32.0"
open = "5.0.0"
prost = "0.12.0"
semver = "1.0.20"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.10.0" }

[build-dependencies]
tonic-build = "0.10.0"
