[package]
name = "mycelia_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }
thiserror = { workspace = true }

# TODO this should only be included when targeting !wasm
hyper = "0.14.27"
