[package]
name = "protos"
description = "Common Mycelia .proto files"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyceliaNetwork/mycelia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.10.0"
protoc = "2.0.0"

[dependencies]
tonic-build = "0.10.0"
