[package]
name = "resource_providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
wit-bindgen = { workspace = true }
http = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true, features = ["full"]}
tokio = { workspace = true, features = ["full"]}

hyper-tls = { version = "0.5.0"}
