[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
wasmtime = { version = "12.0.1", features = ["component-model"] }
wasmtime-wasi = "12.0.1"
