[package]
name = "xtask"
description = "Custom Mycelia tasks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyceliaNetwork/mycelia"
authors = ["Daniel Terwiel <dani+mycelia@departure.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
dialoguer = "0.11.0"
env_logger = { workspace = true }
log = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
version-compare = { workspace = true }
trim-margin = "0.1.0"
