[package]
name = "mycelia_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
wit-bindgen = { workspace = true }
http = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }
hyper = { version = "0.14.27", features = ["full"]}
tokio = { workspace = true, features = ["full"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
