[package]
name = "mycelia_guest_function"
description = "A wasm guest to execute functions"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyceliaNetwork/mycelia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wit-bindgen = { workspace = true }
mycelia_http = { version = "0.1.0", path = "../../guest_crates/mycelia_http" }

[build-dependencies]
wit-deps = "0.3.1"
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]
