[package]
name = "mycelia_guest_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wit-bindgen = { workspace = true }
mycelia_http = { version = "0.1.0", path = "../../guest_crates/mycelia_http" }

[build-dependencies]
wit-deps = "0.3.1"
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]
