[package]
name = "function_service"
description = "A library for running Wasmtime components"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MyceliaNetwork/mycelia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tower = { version = "0.4.13", features = ["full"] }
wasmtime_components = { path = "../../wasmtime_components" }
http = "0.2.9"
resource_providers = { version = "0.1.0", path = "../../resource_providers" }
